# Wenderer

./: Cargo.toml  README.md
src/: data.rs  geometries.rs  main.rs  rendering.rs  shading.rs  utils.rs
src/shaders/: canvas_shader.wgsl
