[package]
name = "wenderer"
version = "0.6.1"
authors = ["feng liang <feng.liang@alumni.kaust.edu.sa>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
winit = "0.30"
glam = { version = "0.32", features = ["bytemuck"] }
env_logger = "0.11"
wgpu = "29.0"
futures = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
rayon = "1.10"
half = { version = "2.7", features = ["num-traits", "bytemuck"] }

[profile.release]
lto = true